--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_modal.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_modal.scss
@@ -1,7 +1,7 @@
+/// <reference path="../_variables.scss" />
 /// <reference path="../bs4/scss/bootstrap.scss" />
 
 // FLEX MODAL
-// TODO: (mc) rename file > _modal.scss
 // ------------------------------------
 
 .modal-backdrop.show {
