--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/skinning/_photoswipe.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/skinning/_photoswipe.scss
@@ -1,5 +1,6 @@
-/// <reference path="bs4/scss/bootstrap.scss" />
-/// <reference path="photoswipe/_main-settings.scss" />
+/// <reference path="../bs4/scss/bootstrap.scss" />
+/// <reference path="../_variables.scss" />
+/// <reference path="../vendors/photoswipe/_main-settings.scss" />
 
 
 // Photoswipe Theme
