--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/skinning/_pnotify.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/skinning/_pnotify.scss
@@ -1,4 +1,4 @@
-/// <reference path="_mixins.scss" />
+/// <reference path="../shared/_mixins.scss" />
 /// <reference path="../bs4/scss/bootstrap.scss" />
 /// <reference path="../pnotify/css/pnotify.css" />
 /// <reference path="../pnotify/css/pnotify.buttons.css" />
