--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/skinning/_slick.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/skinning/_slick.scss
@@ -1,5 +1,5 @@
-/// <reference path="bs4/scss/bootstrap.scss" />
-/// <reference path="slick/slick.scss" />
+/// <reference path="../bs4/scss/bootstrap.scss" />
+/// <reference path="../vendors/slick/slick.scss" />
 
 
 // General
