--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -58,7 +58,6 @@ $facet-selection-color:             darken($brand-success, 15%);
 .instasearch-icon {
     position: relative;
     top: 0.12rem;
-    //font-size: inherit !important;
 }
 
 #instasearch-drop {
@@ -84,7 +83,6 @@ $facet-selection-color:             darken($brand-success, 15%);
 .instasearch-drop-body {
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
-    //font-size: 0.85rem;
 }
 
 .instasearch-match {
@@ -193,7 +191,7 @@ $facet-selection-color:             darken($brand-success, 15%);
 
 
 //
-// Facettes
+// Facetes
 // --------------------------------------------------
 
 .facet-group {
@@ -258,7 +256,7 @@ $facet-selection-color:             darken($brand-success, 15%);
 
 
 //
-// Facettes (Check/Radio)
+// Facetes (Check/Radio)
 // --------------------------------------------------
 
 $facet-control-size:        20px;
@@ -374,7 +372,7 @@ $facet-control-size:        20px;
 
 
 //
-// Facettes (active filters)
+// Facetes (active filters)
 // --------------------------------------------------
 
 .active-filters-container {
